# wg-gesucht-bot

./: .gitignore  README.md  pyproject.toml  wg-gesucht.py
src/: __init__.py  db.py  listing_getter.py  listing_info_getter.py  message_generator.py  message_template.py  submit_wg.py
