[project]
name = "wg-gesucht-bot"
version = "0.1.0"
description = "Automated WG-Gesucht application bot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "playwright>=1.40",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "openai>=1.40",
]
